[package]
name = "github-db"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.48"
rust-query = "0.6"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
http = "1"
chrono = "0.4"
ringbuffer = "0.16"
itertools = "0.14"

[dev-dependencies]
dotenvy = "0.15"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
